# claude-cockpit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  claude-cockpit.toml.example
.claude/skills/deploy/: SKILL.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md
docs/superpowers/plans/: 2026-06-23-widget-drill-in.md
src/: app.rs  config.rs  event.rs  graph.rs  layout.rs  lib.rs  main.rs  refresh.rs  render.rs  theme.rs  trend.rs  util.rs  widget.rs
src/collect/: activity.rs  docker.rs  git.rs  git_detail.rs  jobs.rs  loc.rs  mod.rs  ports.rs  pricing.rs  procs.rs  skills.rs  tools.rs  usage.rs
src/render/: dashboard.rs
src/render/detail/: activity.rs  code.rs  container.rs  cost.rs  diff.rs  job.rs  mod.rs  ports.rs  procs.rs  repo.rs  skills.rs  worktree.rs
src/render/widgets/: activity.rs  code.rs  cost.rs  docker.rs  jobs.rs  mod.rs  ports.rs  procs.rs  repo.rs  skills.rs  tools.rs  worktrees.rs
